[package]
name = "laast-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
futures = "0.3.30"
log = "0.4.21"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
tree-sitter = "=0.20.10"
tree-sitter-c-sharp = "0.20.0"
tree-sitter-go = "0.20.0"
tree-sitter-java = "0.20.0"
tree-sitter-javascript = "0.20.0"
tree-sitter-python = "0.20.0"
tree-sitter-ruby = "0.20.1"
tree-sitter-rust = "0.20.4"
